# Precaution-Agent

./: .env.example  Precaution Agent Explanation.md  flood_test_payload.json  pyproject.toml  test_e2e.py  test_response.json
.gemini/: settings.json
app/: main.py
app/agent/: precaution_agent.py  system_prompt.py
app/agent/calculators/: displacement_calculator.py  equipment_calculator.py  food_water_calculator.py  gap_analyzer.py  medical_calculator.py  shelter_calculator.py
app/agent/tools/: existing_tasks_tool.py  location_context_tool.py  ngo_resource_tool.py  resource_calculator_tool.py  web_search_tool.py
app/api/routes/: health_controller.py  precaution_controller.py
app/core/: config.py  exceptions.py  logger.py
app/database/: collection_db_connection.py  main_db_connection.py
app/database/queries/: disaster_event_queries.py  location_queries.py  ngo_queries.py  task_queries.py
app/models/: input_models.py  output_models.py
app/services/: task_writer_service.py  work_distributor_service.py
tests/: automate_precaution_test.py
